--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "eslint-config-base-ts",
+  "name": "eslint-config-base-diametra-ts",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com:Diametra-Labs/eslint-config-base-ts.git",
-  "author": "markoz <markdrew53@gmail.com>",
-  "license": "true",
+  "author": "Markoz Peña <markdrew53@gmail.com>",
+  "keywords": [
+    "eslint",
+    "eslint-config",
+    "prettier",
+    "prettier-config",
+    "zero-config",
+    "typescript"
+  ],
+  "license": "MIT",
   "private": false,
-  "peerDependencies": {
-    "eslint": ">= 5",
-    "eslint-config-prettier": ">= 3",
-    "eslint-plugin-react": ">= 7"
-  },
-  "devDependencies": {
-    "@types/jest": "^25.2.3",
+  "dependencies": {
     "@typescript-eslint/eslint-plugin": "^3.2.0",
     "@typescript-eslint/parser": "^3.2.0",
     "eslint": "^7.2.0",
@@ -20,7 +22,20 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
+    "prettier": "^2.0.5"    
+  },
+  "devDependencies": {
     "jest": "^26.0.1",
+    "@types/jest": "^25.2.3"
+  },
+  "peerDependencies": {
+    "@typescript-eslint/parser": "^3.2.0",
+    "@typescript-eslint/eslint-plugin": "^3.2.0",
+    "eslint": "^7.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
     "prettier": "^2.0.5"
   },
   "scripts": {
