--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - uses: actions/first-interaction@v1
         with:
-            repo-token: ${{ secrets.TOKEN_GREETING }}
+            repo-token: ${{ secrets.TOKEN_GREETING_2 }}
             issue-message: 'Thanks for helping us to improve the project with your feedback'
             pr-message: 'Congratulations for doing your first PR !'
             
